CAMEL-22257: Java 25 deprecations commits (#18789)
* Use threadId() instead of getId(), TODO update once baseline is java 21

* use URI.create instead of deprecated new URL()

* SecurityManager deprecations and removals

* java 25 deprecations